--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Spanish"
+        android:text="Español"
         android:id="@+id/searchSpanish"
         android:layout_below="@+id/search"
         android:layout_centerHorizontal="true"
