--- a/app/src/main/res/drawable/btn_flat_pressed.xml
+++ b/app/src/main/res/drawable/btn_flat_pressed.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+       android:shape="rectangle">
+    <solid android:color="@color/flat_pressed" />
+    <corners android:radius="@dimen/btn_flat_corner_radius" />
+</shape>
