--- a/app/src/main/res/layout/activity_search_new_spanish.xml
+++ b/app/src/main/res/layout/activity_search_new_spanish.xml
@@ -5,9 +5,9 @@
             android:layout_height="fill_parent"
     >
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="fill_parent"
-             android:layout_height="wrap_content"
-             android:orientation="horizontal">
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
@@ -24,15 +24,15 @@
         >
 
         <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/imageView2"
-                android:src="@android:drawable/ic_media_play"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView2"
+            android:src="@android:drawable/ic_media_play"/>
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Search for Organizations"
+            android:text="Búsqueda de organizaciones"
             android:id="@+id/Search"
             style="@style/ButtonAppTheme"
             android:layout_toRightOf="@+id/imageView2"/>
@@ -40,11 +40,11 @@
         <Button
             android:layout_alignParentRight="true"
             android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Clear"
-                android:id="@+id/Clear"
-                style="@style/ButtonAppTheme"
-                android:gravity="center"
+            android:layout_height="wrap_content"
+            android:text="Neto"
+            android:id="@+id/Clear"
+            style="@style/ButtonAppTheme"
+            android:gravity="center"
             />
     </RelativeLayout>
 
@@ -58,16 +58,16 @@
         style="@style/horizontalLinLayout">
 
         <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/imageView3"
-                android:src="@android:drawable/ic_media_pause"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView3"
+            android:src="@android:drawable/ic_media_pause"/>
 
         <com.search.victor.searchengine.CustomAutoCompleteView
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/OrgInName"
-                android:hint="Organization Name"/>
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/OrgInName"
+            android:hint="Organization Name"/>
     </LinearLayout>
 
 
