--- a/app/src/main/res/layout/content_organization.xml
+++ b/app/src/main/res/layout/content_organization.xml
@@ -11,7 +11,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.search.victor.searchengine.Organization"
-    tools:showIn="@layout/activity_organization">
+    tools:showIn="@layout/activity_organization"
+    android:id="@+id/ResultsLayout">
 
         <Button
             android:layout_width="wrap_content"
@@ -58,3 +59,4 @@
             </LinearLayout>
         </ScrollView>
 </RelativeLayout>
+
